force-app/main/default/objects/MD_Sales_Area__c/MD_Sales_Area__c.object-meta.xml
<CustomObject>
    <label>Sales Area</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Sales Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>