force-app/main/default/objects/MD_Sales_Area__c/fields/Credit_Segment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Segment__c</fullName>
    <defaultValue>&quot;ZAK1 Credit Segment MDM&quot;</defaultValue>
    <label>Credit Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>