force-app/main/default/objects/MD_Sales_Area__c/fields/Customer_Account_Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Assignment_Group__c</fullName>
    <label>Customer Account Assignment Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Domestic Revenues</fullName>
            </value>
            <value>
                <fullName>02 - Foreign Revenue</fullName>
            </value>
            <value>
                <fullName>03 - Affiliat Comp Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>