force-app/main/default/objects/MD_Sales_Area__c/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Distributor</fullName>
            </value>
            <value>
                <fullName>02 - Institutions</fullName>
            </value>
            <value>
                <fullName>03 - Export</fullName>
            </value>
            <value>
                <fullName>04 - Tender Business</fullName>
            </value>
            <value>
                <fullName>05 - Trader</fullName>
            </value>
            <value>
                <fullName>06 - Hospitals</fullName>
            </value>
            <value>
                <fullName>07 - Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>08 - Government Institutions</fullName>
            </value>
            <value>
                <fullName>09 - Textiles</fullName>
            </value>
            <value>
                <fullName>10 - Pathological Labs</fullName>
            </value>
            <value>
                <fullName>11 - Cosmetics</fullName>
            </value>
            <value>
                <fullName>12 - Foods &amp; Beverages</fullName>
            </value>
            <value>
                <fullName>13 - Technical</fullName>
            </value>
            <value>
                <fullName>14 - Others</fullName>
            </value>
            <value>
                <fullName>15 - Government Hosp/Clin</fullName>
            </value>
            <value>
                <fullName>16 - Private Hosp/Clin</fullName>
            </value>
            <value>
                <fullName>17 - Retail Business</fullName>
            </value>
            <value>
                <fullName>18 - Government</fullName>
            </value>
            <value>
                <fullName>19 - Govern&apos;nt-University</fullName>
            </value>
            <value>
                <fullName>20 - Private Doctor</fullName>
            </value>
            <value>
                <fullName>21 - Private Hospital</fullName>
            </value>
            <value>
                <fullName>22 - Other 3rd - Private</fullName>
            </value>
            <value>
                <fullName>23 - Other 3rd - Public</fullName>
            </value>
            <value>
                <fullName>24 - Toll</fullName>
            </value>
            <value>
                <fullName>25 - Wholesalers</fullName>
            </value>
            <value>
                <fullName>50 - Others MDL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>