force-app/main/default/objects/MD_Sales_Area__c/fields/Customer_No_from_parent_account__c.field-meta.xml
<CustomField>
    <fullName>Customer_No_from_parent_account__c</fullName>
    <formula>Parent_Account__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer No from parent account</label>
    <type>Text</type>
</CustomField>