force-app/main/default/objects/MD_Sales_Area__c/fields/Delivering_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Plant__c</fullName>
    <label>Delivering Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3100 - MDSPL – Head Office, Karachi</fullName>
            </value>
            <value>
                <fullName>3200 - MDSPL – Lahore Warehouse</fullName>
            </value>
            <value>
                <fullName>3300 - MDSPL – Korangi Warehouse</fullName>
                <default>true</default>
                <label>3300 - MDSPL – Korangi Warehouse</label>
            </value>
            <value>
                <fullName>3100 - MDMSPL-Head Office Karachi</fullName>
                <isActive>false</isActive>
                <label>3100 - MDMSPL-Head Office Karachi</label>
            </value>
            <value>
                <fullName>3200 - MDMSPL-Lahore Warehouse</fullName>
                <isActive>false</isActive>
                <label>3200 - MDMSPL-Lahore Warehouse</label>
            </value>
            <value>
                <fullName>3300 - MDMSPL-Korangi Warehouse</fullName>
                <isActive>false</isActive>
                <label>3300 - MDMSPL-Korangi Warehouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>