force-app/main/default/objects/MD_Sales_Area__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 - Local</fullName>
                <default>true</default>
                <label>10 - Local</label>
            </value>
            <value>
                <fullName>20 - Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>