force-app/main/default/objects/MD_Sales_Area__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20 - Chemicals</fullName>
            </value>
            <value>
                <fullName>30 - Diagnostics</fullName>
            </value>
            <value>
                <fullName>40 - Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>