force-app/main/default/objects/MD_Sales_Area__c/fields/Division_Extension__c.field-meta.xml
<CustomField>
    <fullName>Division_Extension__c</fullName>
    <label>Division Extension</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30-Diagnostics</fullName>
            </value>
            <value>
                <fullName>20-Chemical</fullName>
            </value>
            <value>
                <fullName>40-Services</fullName>
            </value>
            <value>
                <fullName>30-Diagnostics &amp; 40-Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>