force-app/main/default/objects/MD_Sales_Area__c/fields/Enterprise_Account__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enterprise Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Areas (Enterprise Account)</relationshipLabel>
    <relationshipName>Sales_Areas1</relationshipName>
    <type>Lookup</type>
</CustomField>