force-app/main/default/objects/MD_Sales_Area__c/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFR - Costs and freight</fullName>
            </value>
            <value>
                <fullName>CIF - Costs, insurance &amp; freight</fullName>
            </value>
            <value>
                <fullName>CIP - Carriage and insurance paid to</fullName>
            </value>
            <value>
                <fullName>CPT - Carriage paid to</fullName>
            </value>
            <value>
                <fullName>DAF - Delivered at frontier</fullName>
            </value>
            <value>
                <fullName>DDP - Delivered Duty Paid</fullName>
            </value>
            <value>
                <fullName>DDU - Delivered Duty Unpaid</fullName>
            </value>
            <value>
                <fullName>DEQ - Delivered ex quay (duty paid)</fullName>
            </value>
            <value>
                <fullName>DES - Delivered ex ship</fullName>
            </value>
            <value>
                <fullName>EXW - Ex Works</fullName>
            </value>
            <value>
                <fullName>FAS - Free Alongside Ship</fullName>
            </value>
            <value>
                <fullName>FCA - Free Carrier</fullName>
            </value>
            <value>
                <fullName>FH  - Free house</fullName>
            </value>
            <value>
                <fullName>FOB - Free on board</fullName>
            </value>
            <value>
                <fullName>UN  - Not Free</fullName>
            </value>
            <value>
                <fullName>LCL - Local Sales</fullName>
            </value>
            <value>
                <fullName>LCL - Local</fullName>
                <isActive>false</isActive>
                <label>LCL - Local</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>