force-app/main/default/objects/MD_Sales_Area__c/fields/Incoterms_Description__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Description__c</fullName>
    <label>Incoterms Description</label>
    <type>TextArea</type>
</CustomField>