force-app/main/default/objects/MD_Sales_Area__c/fields/Output_Tax_Category_MWST_Code__c.field-meta.xml
<CustomField>
    <fullName>Output_Tax_Category_MWST_Code__c</fullName>
    <label>MWST Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Tax Exempt LS</fullName>
            </value>
            <value>
                <fullName>1 - Liable for Taxes LS</fullName>
            </value>
            <value>
                <fullName>2 - Sale Tax @1% Pharma</fullName>
            </value>
            <value>
                <fullName>3 - Expt SaleTax1% Pharm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>