force-app/main/default/objects/MD_Sales_Area__c/fields/Output_Tax_Category_ZMST_Code__c.field-meta.xml
<CustomField>
    <fullName>Output_Tax_Category_ZMST_Code__c</fullName>
    <label>ZMST Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 - Filer Dealer</fullName>
            </value>
            <value>
                <fullName>4 - Non Filer Dealer</fullName>
            </value>
            <value>
                <fullName>5 - End User/Govt/Tribal</fullName>
            </value>
            <value>
                <fullName>6 - Filer TM</fullName>
            </value>
            <value>
                <fullName>7 - Non Filer TM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>