force-app/main/default/objects/MD_Sales_Area__c/fields/Output_Tax_Category_ZMWS_Code__c.field-meta.xml
<CustomField>
    <fullName>Output_Tax_Category_ZMWS_Code__c</fullName>
    <label>ZMWS Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Unregistered</fullName>
            </value>
            <value>
                <fullName>2 - Registered</fullName>
            </value>
            <value>
                <fullName>3 - Exempted</fullName>
            </value>
            <value>
                <fullName>4 - Govt. Institute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>