force-app/main/default/objects/MD_Sales_Area__c/fields/Output_Tax_Category_ZPK2_Code__c.field-meta.xml
<CustomField>
    <fullName>Output_Tax_Category_ZPK2_Code__c</fullName>
    <label>ZPK2 Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Exempt Further Tax</fullName>
            </value>
            <value>
                <fullName>0 - Further Sales Tax 3%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>