force-app/main/default/objects/MD_Sales_Area__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001 - Payable immediately Due net</fullName>
            </value>
            <value>
                <fullName>0002 - within 14 days 2 % cash discount</fullName>
            </value>
            <value>
                <fullName>0003 - within 14 days 3 % cash discount</fullName>
            </value>
            <value>
                <fullName>0004 - Payable immediately Due net</fullName>
            </value>
            <value>
                <fullName>0005 - Payable immediately Due net</fullName>
            </value>
            <value>
                <fullName>0006 - Before End of the month 4 % cash discount</fullName>
            </value>
            <value>
                <fullName>0007 - For Invoicing up to 15 of Month</fullName>
            </value>
            <value>
                <fullName>0008 - For Invoicing up to 15 of Month</fullName>
            </value>
            <value>
                <fullName>0009 - Payable in 3 partial amounts</fullName>
            </value>
            <value>
                <fullName>0010 - 4 Months Installment</fullName>
            </value>
            <value>
                <fullName>0011 - 5 Months Installment</fullName>
            </value>
            <value>
                <fullName>0012 - 7 Months Installment</fullName>
            </value>
            <value>
                <fullName>0013 - 8 Months Installment</fullName>
            </value>
            <value>
                <fullName>0014 - 9 Months Installment</fullName>
            </value>
            <value>
                <fullName>0015 - 10 Months Installment</fullName>
            </value>
            <value>
                <fullName>0016 - 11 Months Installment</fullName>
            </value>
            <value>
                <fullName>0017 - 13 Months Installment</fullName>
            </value>
            <value>
                <fullName>0018 - 14 Months Installment</fullName>
            </value>
            <value>
                <fullName>0019 - 15 Months Installment</fullName>
            </value>
            <value>
                <fullName>0020 - 16 Months Installment</fullName>
            </value>
            <value>
                <fullName>0021 - 17 Months Installment</fullName>
            </value>
            <value>
                <fullName>0022 - 20 Months Installment</fullName>
            </value>
            <value>
                <fullName>0023 - 24 Months Installment</fullName>
            </value>
            <value>
                <fullName>0024 - 20 Months Installment</fullName>
            </value>
            <value>
                <fullName>C001 - Payable immediately Due net</fullName>
            </value>
            <value>
                <fullName>C002 - Letter of Credit at Sight</fullName>
            </value>
            <value>
                <fullName>C003 - within 30 days Due net</fullName>
            </value>
            <value>
                <fullName>C004 - within 45 days Due net</fullName>
            </value>
            <value>
                <fullName>C005 - within 50 days Due net</fullName>
            </value>
            <value>
                <fullName>C006 - within 60 days Due net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>