force-app/main/default/objects/MD_Sales_Area__c/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <label>Price Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - Bulk buyer</fullName>
            </value>
            <value>
                <fullName>02 - Occasional buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>