force-app/main/default/objects/MD_Sales_Area__c/fields/Pricing_Procedure_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Procedure_Indicator__c</fullName>
    <label>Pricing Procedure Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Standard</fullName>
            </value>
            <value>
                <fullName>2 - Stand Incl Sales Tax</fullName>
            </value>
            <value>
                <fullName>3 - Staff / Internal</fullName>
            </value>
            <value>
                <fullName>5 - Affiliate</fullName>
            </value>
            <value>
                <fullName>6 - Cond. Contr. Settle.</fullName>
            </value>
            <value>
                <fullName>7 - Export</fullName>
            </value>
            <value>
                <fullName>G - GG Cust Std (ISHTSW)</fullName>
            </value>
            <value>
                <fullName>M - NF Weight-Dependent</fullName>
            </value>
            <value>
                <fullName>N - NF Standard</fullName>
            </value>
            <value>
                <fullName>R - DRM customer</fullName>
            </value>
            <value>
                <fullName>W - AECMA customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>