force-app/main/default/objects/MD_Sales_Area__c/fields/Sales_Area_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area_Name_Formula__c</fullName>
    <formula>HYPERLINK(
    &apos;/&apos; &amp; Id,
    Sales_Org__c &amp; &apos; - &apos; &amp;
    LEFT(TEXT(Distribution_Channel__c), FIND(&quot; - &quot;, TEXT(Distribution_Channel__c)) - 1) &amp; &apos; - &apos; &amp;
    LEFT(TEXT(Division__c), FIND(&quot; - &quot;, TEXT(Division__c)) - 1) &amp; &apos; - &apos; &amp; Name, &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Area Name</label>
    <type>Text</type>
</CustomField>