force-app/main/default/objects/MD_Sales_Area__c/fields/Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Sales_District__c</fullName>
    <label>Sales District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000 - Northern Region</fullName>
            </value>
            <value>
                <fullName>2000 - Central Region</fullName>
            </value>
            <value>
                <fullName>3000 - South Region</fullName>
            </value>
            <value>
                <fullName>4000 - Eastern Region</fullName>
            </value>
            <value>
                <fullName>5000 - Global Region</fullName>
            </value>
            <value>
                <fullName>6000 - Export Region - I</fullName>
            </value>
            <value>
                <fullName>7000 - Export Region - II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>