force-app/main/default/objects/MD_Sales_Area__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <label>Sales Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z01 - Sales Group Karachi</fullName>
            </value>
            <value>
                <fullName>Z02 - Sales Group Hyderabad</fullName>
            </value>
            <value>
                <fullName>Z03 - Sales Group Sukkur</fullName>
            </value>
            <value>
                <fullName>Z04 - Sales Group Quetta</fullName>
            </value>
            <value>
                <fullName>Z05 - Sales Group Multan</fullName>
            </value>
            <value>
                <fullName>Z06 - Sales Group Faisalabad</fullName>
            </value>
            <value>
                <fullName>Z07 - Sales Group Lahore</fullName>
            </value>
            <value>
                <fullName>Z08 - Sales Group Gujranwala</fullName>
            </value>
            <value>
                <fullName>Z09 - Sales Group Rawalpindi</fullName>
            </value>
            <value>
                <fullName>Z10 - Sales Group Peshawar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>