force-app/main/default/objects/MD_Sales_Area__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000 - Sales Office KHI</fullName>
            </value>
            <value>
                <fullName>2000 - Sales Office LHR</fullName>
            </value>
            <value>
                <fullName>3000 - Sales Office ISB</fullName>
            </value>
            <value>
                <fullName>4000 - Sales Office UET</fullName>
            </value>
            <value>
                <fullName>5000 - Sales Office MUX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>