force-app/main/default/objects/MD_Sales_Area__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <defaultValue>&quot;3000&quot;</defaultValue>
    <label>Sales Org</label>
    <length>50</length>
    <type>Text</type>
</CustomField>