force-app/main/default/objects/MD_Sales_Area__c/fields/SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Number__c</fullName>
    <formula>Parent_Account__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Customer Number</label>
    <type>Text</type>
</CustomField>