force-app/main/default/objects/MD_Sales_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Incoterms__c</columns>
    <columns>Credit_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>